--- a/app/views/tweets/_form.html.erb
+++ b/app/views/tweets/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= f.label :message %>
-    <%= f.text_field :message %>
+    <%= f.text_area :message, size: '50x20', id: 'some_id'%>
   </div>
 
   <div class="field">
