--- a/app/views/epicenter/show_user.html.erb
+++ b/app/views/epicenter/show_user.html.erb
@@ -6,7 +6,7 @@
 
 <% unless current_user.id == @user.id %>
   <% if current_user.following.include?(@user.id) %>
-    <%= link_to "Unfollow", unfollow_path(id: @user.id), class: "btn btn-danger" %>
+    <%= link_to "Following", unfollow_path(id: @user.id), class: "btn btn-primary", id: 'unfollow_btn' %>
   <% else %>
     <%= link_to "Follow", now_following_path(id: @user.id), class: "btn btn-primary" %>
   <% end %>
